InfraPlatform/vpcendpoint/v4/cf-vpcendpoint.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Amazon VPC Endpoints stack

Parameters:
  AWSRegion:
    Description: Region for AWS Services
    Type: String
    AllowedValues:
      - ap-southeast-1  
  VpcId:
    Description: VPC to create endpoints and workspace
    Type: AWS::EC2::VPC::Id
  VpcCidr1:
    Description: VPC CIDR 1 IP Range
    Type: String
  VpcCidr2:
    Description: VPC CIDR 2 IP Range
    Type: String
  VpcCidr3:
    Description: VPC CIDR 3 IP Range
    Type: String
    Default: ""
  VpcCidr4:
    Description: VPC CIDR 4 IP Range
    Type: String
    Default: ""
  VpcCidr5:
    Description: VPC CIDR 5 IP Range
    Type: String
    Default: ""
  AppSubnetIds:
    Description: Subnets to create endpoints and workspace
    Type: List<AWS::EC2::Subnet::Id>
  AppShortName:
    Description: Application name
    Type: String
  EnvName:
    Description: Env Name
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c

  CreateGrafanaEndpoint:
    Description: Create VPC Endpoint for Grafana?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateEKSEndpoint:
    Description: Create VPC Endpoint for EKS?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateXRayEndpoint:
    Description: Create VPC Endpoint for X-Ray?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateAMPEndpoint:
    Description: Create VPC Endpoint for AMP (Prometheus)?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateECREndpoints:
    Description: Create VPC Endpoints for ECR (API and Docker)?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateELBEndpoint:
    Description: Create VPC Endpoint for Elastic Load Balancing?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateSecretsEndpoint:
    Description: Create VPC Endpoint for Secrets Manager?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateElasticacheEndpoint:
    Description: Create VPC Endpoint for Elasticache?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateSESEndpoint:
    Description: Create VPC Endpoint for SES?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateAPIGatewayEndpoint:
    Description: Create VPC Endpoint for API Gateway?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateSQSEndpoint:
    Description: Create VPC Endpoint for SQS?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateRDSEndpoint:
    Description: Create VPC Endpoint for RDS?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateLambdaEndpoint:
    Description: Create VPC Endpoint for Lambda?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateS3Endpoint:
    Description: Create VPC Endpoint for S3?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateECSEndpoint:
    Description: Create VPC Endpoint for ECS?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateCloudFormationEndpoint:
    Description: Create VPC Endpoint for CloudFormation?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateGlueEndpoint:
    Description: Create VPC Endpoint for AWS Glue?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateDataSyncEndpoint:
    Description: Create VPC Endpoint for AWS DataSync?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateSNSEndpoint:
    Description: Create VPC Endpoint for Amazon SNS?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateBatchEndpoint:
    Description: Create VPC Endpoint for AWS Batch?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateAthenaEndpoint:
    Description: Create VPC Endpoint for Amazon Athena?
    Type: String
    AllowedValues: [true, false]
    Default: false
  
  CreateCloudWatchLogsEndpoint:
    Description: Create VPC Endpoint for CloudWatch Logs?
    Type: String
    AllowedValues: [true, false]
    Default: false

  CreateACMEndpoint:
    Description: Create VPC Endpoint for AWS Certificate Manager (ACM)?
    Type: String
    AllowedValues: [true, false]
    Default: false

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasVpcCidr3: !Not [!Equals [!Ref VpcCidr3, '']]
  HasVpcCidr2: !Not [!Equals [!Ref VpcCidr2, '']]
  HasVpcCidr4: !Not [!Equals [!Ref VpcCidr4, '']]
  HasVpcCidr5: !Not [!Equals [!Ref VpcCidr5, '']]
  
  # Service-specific conditions
  CreateGrafana: !Equals [!Ref CreateGrafanaEndpoint, "true"]
  CreateEKS: !Equals [!Ref CreateEKSEndpoint, "true"]
  CreateXRay: !Equals [!Ref CreateXRayEndpoint, "true"]
  CreateAMP: !Equals [!Ref CreateAMPEndpoint, "true"]
  CreateECR: !Equals [!Ref CreateECREndpoints, "true"]
  CreateELB: !Equals [!Ref CreateELBEndpoint, "true"]
  CreateSecrets: !Equals [!Ref CreateSecretsEndpoint, "true"]
  CreateElasticache: !Equals [!Ref CreateElasticacheEndpoint, "true"]
  CreateSES: !Equals [!Ref CreateSESEndpoint, "true"]
  CreateAPIGateway: !Equals [!Ref CreateAPIGatewayEndpoint, "true"]
  CreateSQS: !Equals [!Ref CreateSQSEndpoint, "true"]
  CreateRDS: !Equals [!Ref CreateRDSEndpoint, "true"]
  CreateLambda: !Equals [!Ref CreateLambdaEndpoint, "true"]
  CreateS3: !Equals [!Ref CreateS3Endpoint, "true"]
  CreateECS: !Equals [!Ref CreateECSEndpoint, "true"]
  CreateCloudFormation: !Equals [!Ref CreateCloudFormationEndpoint, "true"]
  CreateGlue: !Equals [!Ref CreateGlueEndpoint, "true"]
  CreateDataSync: !Equals [!Ref CreateDataSyncEndpoint, "true"]
  CreateSNS: !Equals [!Ref CreateSNSEndpoint, "true"]
  CreateBatch: !Equals [!Ref CreateBatchEndpoint, "true"]
  CreateAthena: !Equals [!Ref CreateAthenaEndpoint, "true"]
  CreateCloudWatchLogs: !Equals [!Ref CreateCloudWatchLogsEndpoint, "true"]
  CreateACM: !Equals [!Ref CreateACMEndpoint, "true"]

  
  # Condition to create main security group if any non-SES endpoint is enabled
  CreateMainSecurityGroup: !Or 
    - !Condition CreateGrafana
    - !Condition CreateEKS  
    - !Or
      - !Condition CreateXRay
      - !Condition CreateAMP
      - !Condition CreateECR
      - !Condition CreateELB
      - !Condition CreateSecrets
      - !Condition CreateElasticache
      - !Condition CreateAPIGateway
      - !Condition CreateSQS
      - !Condition CreateS3
      - !Condition CreateECS
    - !Or
      - !Condition CreateCloudFormation
      - !Condition CreateLambda
      - !Condition CreateGlue
      - !Condition CreateDataSync
      - !Condition CreateSNS
      - !Condition CreateBatch
      - !Condition CreateAthena
      - !Condition CreateCloudWatchLogs
      - !Condition CreateACM

Resources:
  # Security Groups
  VPCESecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: CreateMainSecurityGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for VPC Endpoints
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-vpce
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-vpce
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"

  VPCEAPIGwSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: CreateAPIGateway
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for API Gateway Endpoint
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-vpce-apigw
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-vpce-apigw
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"

  VPCESESSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: CreateSES
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for SES VPC Endpoint
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-vpce-ses
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-vpce-ses
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4
      SecurityGroupIngress:
        # SMTP Port 25
        - IpProtocol: tcp
          FromPort: 25
          ToPort: 25
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"   
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"     
        # SMTP Port 587
        - IpProtocol: tcp
          FromPort: 587
          ToPort: 587
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"        
        # SMTP Port 2587
        - IpProtocol: tcp
          FromPort: 2587
          ToPort: 2587
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"       
        # SMTPS Port 465
        - IpProtocol: tcp
          FromPort: 465
          ToPort: 465
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
        # SMTPS Port 2465
        - IpProtocol: tcp
          FromPort: 2465
          ToPort: 2465
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        # SMTP Port 25
        - IpProtocol: tcp
          FromPort: 25
          ToPort: 25
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 25
            ToPort: 25
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
        # SMTP Port 587
        - IpProtocol: tcp
          FromPort: 587
          ToPort: 587
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"  
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 587
            ToPort: 587
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"   
        # SMTP Port 2587
        - IpProtocol: tcp
          FromPort: 2587
          ToPort: 2587
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue" 
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 2587
            ToPort: 2587
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"            
        # SMTPS Port 465
        - IpProtocol: tcp
          FromPort: 465
          ToPort: 465
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue" 
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 465
            ToPort: 465
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"          
        # SMTPS Port 2465
        - IpProtocol: tcp
          FromPort: 2465
          ToPort: 2465
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 2465
            ToPort: 2465
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"

  VPCERDSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: CreateRDS
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for RDS VPC Endpoint
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-vpce-rds
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-vpce-rds
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !If [IsProduction, 53341, 53331]
          ToPort: !If [IsProduction, 53341, 53331]
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: !If [IsProduction, 53341, 53331]
          ToPort: !If [IsProduction, 53341, 53331]
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: !If [IsProduction, 53341, 53331]
            ToPort: !If [IsProduction, 53341, 53331]
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"

  # VPC Endpoints
  VPCInterfaceEndpointGrafanaWorkspace:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateGrafana
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]    
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.grafana-workspace'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds    
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-grafana-workspace
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointGrafana:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateGrafana
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.grafana'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds   
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-grafana
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointEKS:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateEKS
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.eks'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-eks
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointXRay:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateXRay
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.xray'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-xray
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointAMP:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateAMP
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.aps-workspaces'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-amp
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointECRDkr:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateECR
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.ecr.dkr'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds    
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-ecr-dkr
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointECRAPI:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateECR
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.ecr.api'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds 
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-ecr-api
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointELB:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateELB
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.elasticloadbalancing'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds   
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-elb
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointSecrets:
      Type: 'AWS::EC2::VPCEndpoint'
      Condition: CreateSecrets
      DeletionPolicy: !If [IsProduction, Retain, Delete]
      UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
      Properties:
        ServiceName: !Sub 'com.amazonaws.${AWSRegion}.secretsmanager'
        VpcId: !Ref VpcId
        SubnetIds: !Ref AppSubnetIds  
        SecurityGroupIds:
          - !GetAtt VPCESecurityGroup.GroupId
        VpcEndpointType: Interface
        PrivateDnsEnabled: true
        Tags:
          - Key: Name
            Value: !Sub ${AppShortName}-${EnvName}-vpce-secrets
          - Key: IaCVersion
            Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointElasticache:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateElasticache
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.elasticache'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds       
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-elasticache
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointSES:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateSES
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.email-smtp'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds     
      SecurityGroupIds:
        - !GetAtt VPCESESSecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-ses
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointAPIGateway:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateAPIGateway
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.execute-api'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds  
      SecurityGroupIds:
        - !GetAtt VPCEAPIGwSecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-apigw
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointSQS:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateSQS
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.sqs'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-sqs
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointRDS:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateRDS
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.rds'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCERDSSecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-rds
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointS3:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateS3
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.s3'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: false
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-s3
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointLambda:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateLambda
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.lambda'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-lambda
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointECS:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateECS
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.ecs'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-ecs
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointCloudFormation:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateCloudFormation
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.cloudformation'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-cloudformation
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4
          
  VPCInterfaceEndpointGlue:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateGlue
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.glue'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-glue
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointDataSync:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateDataSync
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.datasync'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-datasync
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointSNS:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateSNS
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.sns'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-sns
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointBatch:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateBatch
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.batch'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-batch
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointAthena:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateAthena
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.athena'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-athena
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointCloudWatchLogs:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateCloudWatchLogs
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.logs'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-logs
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4

  VPCInterfaceEndpointACM:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: CreateACM
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ServiceName: !Sub 'com.amazonaws.${AWSRegion}.acm'
      VpcId: !Ref VpcId
      SubnetIds: !Ref AppSubnetIds
      SecurityGroupIds:
        - !GetAtt VPCESecurityGroup.GroupId
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-vpce-acm
        - Key: IaCVersion
          Value: InfraPlatform-vpcendpoint-v4
